--- a/index.html
+++ b/index.html
@@ -80,17 +80,27 @@
       }
 
       .primary-button {
-          border: none;
-          width: 100%;
-          border-radius: 8px;
           background-color: var(--hospital-green);
-          height: 48px;
+          border-radius: 8px;
+          border: none;
           color: var(--white);
-          font-size: var(--md);
+          width: 100%;
           cursor: pointer;
+          font-size: var(--md);
           font-weight: bold;
+          height: 48px;
       }
-      
+
+      .login-button{
+          margin-top: 12px;
+          margin-bottom: 32px;
+      }
+
+      @media(max-width: 640px){
+          .logo {
+              display: block;
+          }
+      }
   </style>
 </head>
 <body>
@@ -104,7 +114,7 @@
                 <input type="password" name="password" id="password" placeholder="*********" class="input input-password">
                 <label for="re-password" class="label">Re-enter password</label>
                 <input type="password" name="re-password" id="re-password" placeholder="*********" class="input input-password">
-                <input type="submit" value="confirm" name="confirm" id="primary-button login-button" class="primary-button">
+                <input type="submit" value="confirm" name="confirm" id="primary-button" class="primary-button login-button">
             </form>
         </div>
     </div>
