--- a/clase4.html
+++ b/clase4.html
@@ -43,7 +43,7 @@
           margin-bottom: 36px;
       }
 
-      .form {
+      .form, .form div {
           display: flex;
           flex-direction: column;
       }
@@ -79,6 +79,15 @@
           margin-top: 32px;
           margin-bottom: 32px;
       }
+      @media (max-width: 640px){
+          .form-container{
+              height: 100%;
+          }
+          .form{
+              display: flex;
+              justify-content: space-between;
+          }
+      }
   </style>
 </head>
 <body>
@@ -86,12 +95,14 @@
         <div class="form-container">
             <h1 class="title">My account</h1>
             <form action="/" class="form">
-                <label for="name" class="label">Name</label>
-                <input type="text" name="name" id="name" placeholder="Your Name" class="input input-name">
-                <label for="email" class="label">Email</label>
-                <input type="email" name="email" id="email" placeholder="user@example.com" class="input input-email">
-                <label for="password" class="label">Password</label>
-                <input type="password" name="password" id="password" placeholder="*********" class="input input-password">
+                <div>
+                    <label for="name" class="label">Name</label>
+                    <input type="text" name="name" id="name" placeholder="Your Name" class="input input-name">
+                    <label for="email" class="label">Email</label>
+                    <input type="email" name="email" id="email" placeholder="user@example.com" class="input input-email">
+                    <label for="password" class="label">Password</label>
+                    <input type="password" name="password" id="password" placeholder="*********" class="input input-password">
+                </div>
                 <input type="submit" value="Create" name="create" id="primary-button" class="primary-button create-button">
             </form>
         </div>
