--- a/clase11.html
+++ b/clase11.html
@@ -99,7 +99,7 @@
               display: none;
           }
           .navbar {
-              justify-content: space-between;
+              place-items: center;
           }
       }
 </style>
@@ -112,12 +112,12 @@
         </figure>
         <div class="menu-left">
             <ul>
-                <li> <a href="/">All</a></li>
-                <li> <a href="/">Clothes</a></li>
-                <li> <a href="/">Electronics</a></li>
-                <li> <a href="/">Furnitures</a></li>
-                <li> <a href="/">Toys</a></li>
-                <li> <a href="/">Others</a></li>
+                <li><a href="/">All</a></li>
+                <li><a href="/">Clothes</a></li>
+                <li><a href="/">Electronics</a></li>
+                <li><a href="/">Furnitures</a></li>
+                <li><a href="/">Toys</a></li>
+                <li><a href="/">Others</a></li>
             </ul>
         </div>
         <div class="menu-right">
