--- a/clase12.html
+++ b/clase12.html
@@ -96,7 +96,7 @@
                 height: 100vh;
             }
             .picture-container{
-                height: auto
+                height: auto;
                 width: auto;
             }
         }
